	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : minor
Bugzilla   : 14645
Frequency  : rare, on shutdown ost
Description: don't hit live lock with umount ost.
Description: shrink_dcache_parent can be in long loop with destroy dentries,
	     use shrink_dcache_sb instead.

Severity   : minor
Bugzilla   : 14949
Description: don't panic with use echo client
Details    : echo client pass NULL as client nid pointer and this produce null
             pointer dereference.

Severity   : normal
Bugzilla   : 15278
Description: fix build on ppc32
Details    : compile code with -m64 flag produce wrong object file for ppc32.

Severity   : normal
Bugzilla   : 14803
Description: Don't update lov_desc members until making sure they are valid
Details    : When updating lov_desc members via proc fs, need fix their
             validities before doing the real update.

Severity   : normal
Bugzilla   : 15212
Description: Reinitialize optind to 0 so that interactive lfs works in all cases

-------------------------------------------------------------------------------


04-26-2008  Sun Microsystems, Inc.
       * version 1.6.5
       * Support for kernels:
        2.6.5-7.311 (SLES 9),
        2.6.9-67.0.7.EL (RHEL 4),
        2.6.16.54-0.2.5 (SLES 10),
        2.6.18-53.1.14.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
        2.6.22.14 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to problems with nested symlinks and FMODE_EXEC (bug 12652),