@@ -25,11 +25,17 @@ tbd Sun Microsystems, Inc.
 	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
 	  For more information, please refer to bugzilla 13904.
 
+Severity   : normal
+Bugzilla   : 12888
+Description: mds_mfd_close() ASSERTION(rc == 0) 
+Details    : In mds_mfd_close(), we need protect inode's writecount change 
+             within its orphan write semaphore to prevent possible races.
+
 Severity   : minor
 Bugzilla   : 14645
 Frequency  : rare, on shutdown ost
 Description: don't hit live lock with umount ost.
-Description: shrink_dcache_parent can be in long loop with destroy dentries,
+Details    : shrink_dcache_parent can be in long loop with destroy dentries,
 	     use shrink_dcache_sb instead.
 
 Severity   : minor
